# rustalk

./: .gitignore  Cargo.toml
librustalk/: Cargo.toml
librustalk/src/: interact.rs  lib.rs  responces.rs
src/: main.rs
